MINOR: Add Onboarding Flow
